syntax = "proto3";

package movie;

// Définition du message movie
message Movie {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateMovieRequest {
  string title = 1;
  string description = 2;
}

message GetMovieRequest {
  string movie_id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message SearchMoviesRequest {
  string query = 1; 
}

message SearchMoviesResponse {
  repeated Movie movies = 1;
}

// Définition du service de films
service MovieService {
  rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
  rpc SearchMovies(SearchMoviesRequest) returns (SearchMoviesResponse);
  rpc CreateMovie(CreateMovieRequest) returns (Movie);
}